small fixes to dark mode

--- a/src/components/LoginControl/LoginControl.module.scss
+++ b/src/components/LoginControl/LoginControl.module.scss
@@ -1,12 +1,13 @@
 .LoginControl {
   padding: 8px;
   z-index: 2;
-  background: var(--background);
   border: none;
   border-radius: 8px;
 
   user-select: none;
   cursor: pointer;
+  background-color: var(--background);
+  color: var(--text);
 
   &:hover {
     background: rgb(216, 216, 216);
