--- a/src/containers/Modal/Modal.module.scss
+++ b/src/containers/Modal/Modal.module.scss
@@ -26,12 +26,13 @@
 
     padding: 8px;
     z-index: 2;
-    background-color: var(--background);
     border: none;
     border-radius: 8px;
 
     user-select: none;
     cursor: pointer;
+    background-color: var(--background);
+    color: var(--text);
 
     &:hover {
       background: rgb(216, 216, 216);
