--- a/src/containers/ToolBar/ToolBar.module.scss
+++ b/src/containers/ToolBar/ToolBar.module.scss
@@ -15,17 +15,13 @@
     right: 0;
   }
 
-  & > * {
-    background-color: var(--background);
-    color: var(--text);
-  }
-
   display: flex;
 
   gap: 8px;
   padding: 8px 16px;
   z-index: 2;
   background-color: var(--background);
+  color: var(--text);
 
   border-radius: 8px 8px 0 0;
   outline: 2px solid rgb(122, 24, 24);
